--- a/lol-api/src/index.scss
+++ b/lol-api/src/index.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600');
+
 body{
-	background-color: pink;
+	font-family: 'Open Sans', sans-serif;
 }
