--- a/lol-api/src/champions/championTable/championTable.scss
+++ b/lol-api/src/champions/championTable/championTable.scss
@@ -1,36 +1,76 @@
 @import '../../shared/variables.scss';
 
+$tableHeight: 90vh;
+$headerHeight: 5vh;
+$bodyHeight: $tableHeight - $headerHeight;
+
 .championTable {
-	display: grid;
-	grid-auto-flow: row;
-	grid-row-gap: 0.3em;
-	a {
-		text-decoration: none;
-		color: $gold;
-	}
+	
+	color: $goldDull;
+	height: tableHeight;
+	display: flex;
+	flex-direction: column;
+
 	.row {
+		position: relative;
 		display: grid;
 		grid-template-columns: 1fr 2fr 1fr 1fr 1fr;
-		grid-row-gap: 0.1em;
+		grid-gap: 1em;
 		
-		height: 4em;
-		padding: 0.2em;
-		// border: solid 1px $white;
-		background-color: $black;
+		height: 5em;
+		padding: 0.5em;
+		background-color: rgba($blackDark, 0.95);
 		border-radius: 0.1em;
-		box-shadow: 0 0 0.5em #000;
-		transition: all 0.2s;
-		cursor: pointer;
-		&:hover {
-			background-color: pink;
+		border-bottom: solid 1px rgba($white, 0.1);
+		transition: all 0.4s;
+		&:before {
+			content: '';
+			position: absolute;
+			bottom: 0;
+			left: 0;
+			height: 2px;
+			width: 100%;
+			background: linear-gradient(to right, transparent 10%, rgba($white, 0.4) 50%, transparent);
+			z-index: 1;
 		}
-		&>div {
+		&:hover {
+			background-color: $black;
+		}
+		&>div, .name a {
 			display: flex;
 			justify-content: center;
 			align-items: center;
 		}
 		.name {
+			transition:  all 0.5s;
+			letter-spacing: 1px;
+			border-radius: 0.1em;
+			a {
+				text-decoration: none;
+				color: $gold;
+				height: 100%; width: 100%;
+				cursor: pointer;		
+			}
+			&:hover {
+				background-color: lighten($blue, 10%);
 
+				a {
+					color: $black;
+				}
+			}
 		}
+	}
+	.headerRow {
+		text-transform: uppercase;
+		background-color: $black;
+		border-bottom: solid 1px $gold;
+		height: $headerHeight;
+		color: $white;
+	}
+	.dataRows {
+		display: grid;
+		grid-auto-flow: row;
+		overflow: auto;
+		height: $bodyHeight;
 	}
 }
