hide blurred edges of bg image

--- a/src/champions/championTable/championTable.scss
+++ b/src/champions/championTable/championTable.scss
@@ -66,6 +66,7 @@ $bodyHeight: $tableHeight - $headerHeight;
 		border-bottom: solid 1px $gold;
 		height: $headerHeight;
 		color: $white;
+		letter-spacing: 0.2em;
 	}
 	.dataRows {
 		display: grid;
