--- a/src/shared/variables.scss
+++ b/src/shared/variables.scss
@@ -1,12 +1,15 @@
-$blackDark: #191c21;
-$black: #1a1b1c;
+// $blackDark: #191c21;
+$blackDark: #2a2b3b;
+// $black: #1a1b1c;
+$black: #1d222a;
 $blackLight: #222321;
 $white: #f2e7d3;
-// $gold: #785a28;
+
+// $shadow: #D2D2D2;
+$shadow: #A6AAAD;
+
 $gold: #937245;
 $goldLight: #937245;
 $goldDullLight: #cdbe91;
 $goldDull: #5f4924;
-// $blue: #078497;
-// $blue: #07798e;
 $blue: #0addea;
