--- a/src/champions/championTable/championTable.scss
+++ b/src/champions/championTable/championTable.scss
@@ -1,8 +1,9 @@
 @import '../../shared/variables.scss';
 
 $tableHeight: 90vh;
-$headerHeight: 5vh;
-$bodyHeight: $tableHeight - $headerHeight;
+$rowHeight: 3vw;
+$bodyHeight: 80vh;
+$tableRadius: 0.5em;
 
 .championTable {
 	
@@ -10,16 +11,18 @@ $bodyHeight: $tableHeight - $headerHeight;
 	height: tableHeight;
 	display: flex;
 	flex-direction: column;
-
+	.headerRow, .dataRows {
+		box-shadow: 1em 1em 4em $shadow;
+	}
 	.row {
 		position: relative;
 		display: grid;
-		grid-template-columns: 1fr 2fr 1fr 1fr 1fr;
-		grid-gap: 1em;
+		grid-template-columns: 1fr 2fr 2fr 2fr 2fr 2fr;
+		grid-gap: 0.5vw;
 		
-		height: 5em;
-		padding: 0.5em;
-		background-color: rgba($blackDark, 0.95);
+		height: $rowHeight - 0.5vw;
+		padding: 0.5vw;
+		background-color: $black;
 		border-radius: 0.1em;
 		border-bottom: solid 1px rgba($white, 0.1);
 		transition: all 0.4s;
@@ -34,7 +37,7 @@ $bodyHeight: $tableHeight - $headerHeight;
 			z-index: 1;
 		}
 		&:hover {
-			background-color: $black;
+			background-color: lighten($black, 5%);
 		}
 		&>div, .name a {
 			display: flex;
@@ -49,13 +52,15 @@ $bodyHeight: $tableHeight - $headerHeight;
 				text-decoration: none;
 				color: $gold;
 				height: 100%; width: 100%;
-				cursor: pointer;		
+				cursor: pointer;
+				transition: inherit;		
 			}
 			&:hover {
-				background-color: lighten($blue, 10%);
+				// background-color: lighten($blue, 10%);
 
 				a {
-					color: $black;
+					color: $blue;
+					text-shadow: 0 0 0.2em $gold;
 				}
 			}
 		}
@@ -64,14 +69,18 @@ $bodyHeight: $tableHeight - $headerHeight;
 		text-transform: uppercase;
 		background-color: $black;
 		border-bottom: solid 1px $gold;
-		height: $headerHeight;
+		height: $rowHeight;
 		color: $white;
-		letter-spacing: 0.2em;
+		letter-spacing: 0.3vw;
+		border-top-right-radius: $tableRadius;
+		border-top-left-radius: $tableRadius;
 	}
 	.dataRows {
 		display: grid;
 		grid-auto-flow: row;
 		overflow: auto;
 		height: $bodyHeight;
+		border-bottom-right-radius: $tableRadius;
+		border-bottom-left-radius: $tableRadius;
 	}
 }
