--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,10 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600');
+// @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600');
+@import url('https://fonts.googleapis.com/css?family=Muli:400,600');
 @import './shared/variables.scss';
 
 body{
-	font-family: 'Open Sans', sans-serif;
+	// font-family: 'Open Sans', sans-serif;
+	font-family: 'Muli', sans-serif;
 	// background-color: $black;
 		
 }
