adjusted champ reducer model to api

--- a/src/index.scss
+++ b/src/index.scss
@@ -2,7 +2,14 @@
 @import './shared/variables.scss';
 
 body{
-	font-family: 'Muli', sans-serif;		
+	font-family: 'Muli', sans-serif;	
+	#root {
+		border: solid red 1px;
+		box-sizing: border-box;
+		padding-left: $navWidth;
+		width: 100%;
+		height: 100%;
+	}	
 }
 ::-webkit-scrollbar {
     width: 0px;
