--- a/src/nav/nav.scss
+++ b/src/nav/nav.scss
@@ -1,6 +1,5 @@
 @import '../shared/variables.scss';
-$linkSize: 80px;
-$navWidth: $linkSize * 1.5;
+$linkSize: $navWidth * 0.75;
 
 .nav {
 	display: flex;
@@ -12,7 +11,7 @@ $navWidth: $linkSize * 1.5;
 	left: 0;
 
 	width: $navWidth;
-	height: 100%;
+	height: 100vh;
 
 	background-color: $black;
 	color: rgba($white, 0.6);
