--- a/src/champions/championTable/championTable.scss
+++ b/src/champions/championTable/championTable.scss
@@ -1,14 +1,15 @@
 @import '../../shared/variables.scss';
 
 $tableHeight: 90vh;
-$rowHeight: 3vw;
+$rowPadding: 0.5vw; 
+$rowHeight: 3vw - $rowPadding;
 $bodyHeight: 80vh;
 $tableRadius: 0.5em;
 
 .championTable {
 	
 	color: $goldDull;
-	height: tableHeight;
+	// height: $tableHeight;
 	display: flex;
 	flex-direction: column;
 	.headerRow, .dataRows {
@@ -19,9 +20,8 @@ $tableRadius: 0.5em;
 		display: grid;
 		grid-template-columns: 1fr 2fr 2fr 2fr 2fr 2fr;
 		grid-gap: 0.5vw;
-		
-		height: $rowHeight - 0.5vw;
-		padding: 0.5vw;
+		height: $rowHeight;
+		padding: $rowPadding;
 		background-color: $black;
 		border-radius: 0.1em;
 		border-bottom: solid 1px rgba($white, 0.1);
@@ -43,6 +43,12 @@ $tableRadius: 0.5em;
 			display: flex;
 			justify-content: center;
 			align-items: center;
+		}
+		.image {
+			height: $rowHeight;
+			width: auto;
+			justify-self: center;
+			align-self: center;
 		}
 		.name {
 			transition:  all 0.5s;
