--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,10 @@
-@import url('https://fonts.googleapis.com/css?family=Muli:400,600');
+@import url('https://fonts.googleapis.com/css?family=Lora:700|Muli:400,600');
 @import './shared/variables.scss';
 
 body{
-	font-family: 'Muli', sans-serif;	
+	margin: 0;
+	padding: 0;
+	@include bodyFont();
 	#root {
 		box-sizing: border-box;
 		padding-left: $navWidth;
