--- a/src/shared/variables.scss
+++ b/src/shared/variables.scss
@@ -12,3 +12,11 @@ $goldDull: #5f4924;
 $blue: #0addea;
 
 $navWidth: 100px;
+
+@mixin bodyFont() {
+	font-family: 'Muli', sans-serif;
+}
+
+@mixin titleFont() {
+	font-family: 'Lora', serif;
+}
