--- a/src/champions/championTable/championTable.scss
+++ b/src/champions/championTable/championTable.scss
@@ -25,7 +25,7 @@ $tableRadius: 0.5em;
 		padding: $rowPadding;
 		background-color: $black;
 		border-radius: 0.1em;
-		border-bottom: solid 1px rgba($white, 0.1);
+		border-bottom: solid 1px rgba($whiteGold, 0.1);
 		transition: all 0.4s;
 		&:before {
 			content: '';
@@ -34,7 +34,7 @@ $tableRadius: 0.5em;
 			left: 0;
 			height: 2px;
 			width: 100%;
-			background: linear-gradient(to right, transparent 10%, rgba($white, 0.4) 50%, transparent);
+			background: linear-gradient(to right, transparent 10%, rgba($whiteGold, 0.4) 50%, transparent);
 			z-index: 1;
 		}
 		&:hover {
@@ -73,7 +73,7 @@ $tableRadius: 0.5em;
 		background-color: $black;
 		border-bottom: solid 1px $gold;
 		height: $rowHeight;
-		color: $white;
+		color: $whiteGold;
 		letter-spacing: 0.3vw;
 		border-top-right-radius: $tableRadius;
 		border-top-left-radius: $tableRadius;
