--- a/src/shared/variables.scss
+++ b/src/shared/variables.scss
@@ -2,8 +2,9 @@ $blackDark: #151414;
 $black: #1d222a;
 $blackLight: #222321;
 
-$white: #f2e7d3;
-
+$white: rgba(#fff, 0.8);
+$whiteGold: #f2e7d3;
+$gray: rgba($white, 0.5);
 $shadow: #A6AAAD;
 
 $gold: #937245;
@@ -13,6 +14,7 @@ $goldDull: #5f4924;
 $blue: #0addea;
 
 $navWidth: 100px;
+$letterSpace: 2px;
 
 @mixin bodyFont() {
 	font-family: 'Muli', sans-serif;
