--- a/src/index.scss
+++ b/src/index.scss
@@ -8,8 +8,9 @@ body{
 	#root {
 		box-sizing: border-box;
 		padding-left: $navWidth;
-		width: 100%;
+		width: 100vw;
 		height: 100%;
+		overflow-x: hidden;
 	}	
 }
 ::-webkit-scrollbar {
