--- a/src/champions/champions.scss
+++ b/src/champions/champions.scss
@@ -7,17 +7,17 @@
 	.content {
 		width: 65vw;
 	}
-	&:before {
-		content: '';
-		display: block;
-		height: 100%;
-		width: 100%;
-		position: fixed;
-		left: 0;
-		top: 0;
-		background-color: #fff; 
-		z-index: -1;
-		filter: grayscale(60%) blur(5px);
-		transform: scale(1.03);
-	}
+	// &:before {
+	// 	content: '';
+	// 	display: block;
+	// 	height: 100%;
+	// 	width: 100%;
+	// 	position: fixed;
+	// 	left: 0;
+	// 	top: 0;
+	// 	background-color: #fff; 
+	// 	z-index: -1;
+	// 	filter: grayscale(60%) blur(5px);
+	// 	transform: scale(1.03);
+	// }
 }
