--- a/src/champions/championProfile/header/header.scss
+++ b/src/champions/championProfile/header/header.scss
@@ -12,11 +12,25 @@ $nameSize: 5vw;
 
 	.image {
 		position: absolute;
-		top: -5%;
+		top: 0%;
 		left: 0;
 		width: 100%;
-		height: auto;
-		filter: grayscale(50%);
+		height: inherit;
+		&:before {
+			z-index: 1;
+			content: '';
+			position: absolute;
+			bottom: 0;
+			left: 0;
+			width: 100%;
+			height: 5vw;
+			background: linear-gradient(rgba($blackDark, 0.0) 10%, rgba($blackDark, 0.4) 50%, rgba($blackDark, 1));
+		}
+		img {
+			width: 100%;
+			height: auto;
+			filter: grayscale(50%);
+		}
 	}
 	.text {
 		@include titleFont();
@@ -40,14 +54,14 @@ $nameSize: 5vw;
 			font-size: $nameSize * 0.4;
 		}
 	}
-	&:before {
-		z-index: 1;
-		content: '';
-		position: absolute;
-		bottom: 0;
-		left: 0;
-		width: 100%;
-		height: 5vw;
-		background: linear-gradient(rgba($blackDark, 0.0) 10%, rgba($blackDark, 0.4) 50%, rgba($blackDark, 1));
-	}	
+	// &:before {
+	// 	z-index: 1;
+	// 	content: '';
+	// 	position: absolute;
+	// 	bottom: 0;
+	// 	left: 0;
+	// 	width: 100%;
+	// 	height: 5vw;
+	// 	background: linear-gradient(rgba($blackDark, 0.0) 10%, rgba($blackDark, 0.4) 50%, rgba($blackDark, 1));
+	// }	
 }
