adjust field usages to api changes, counters layout

--- a/src/champions/championProfile/championProfile.scss
+++ b/src/champions/championProfile/championProfile.scss
@@ -19,6 +19,10 @@
 			font-size: 1.5vw;
 			padding: 1vw 0;
 		}
+		.subtitle {
+			font-size: 1.2vw;
+			padding: 0.5vw 0;
+		}
 		&>* {
 			// border: solid red 1px;
 		}
